--- a/reserve.html
+++ b/reserve.html
@@ -66,7 +66,7 @@
 
   <script type="text/javascript">
 
-    d3.json("https://montana-backcountry-yurts.appspot.com/calendar.json",function(err, trips){
+    d3.json("https://montana-backcountry-yurts.appspot.com/calendar.json",function(err, calendar){
     // d3.json("http://localhost:8080/calendar.json",function(err, calendar){
       if(err) throw err
       var trips = calendar.trips
