updating the waiver

--- a/waiver/index.html
+++ b/waiver/index.html
@@ -7,71 +7,79 @@
 
 <body>
 
-  <h1 class="txt-h1 py12">YurtSki Waiver 2018</h1>
+  <h2 class="txt-h2 py12">Montana Backcountry Yurts &amp; YurtSki Waiver 2018</h2>
 
-  <p class='txt-s'>In consideration for my being permitted to participate in the activities of backcountry skiing/riding, Cross-country skiing, snowmobiling, and/or snowshoeing I agree to the following Waiver and Release:</p>
+  <form action="javascript:completeWaiver();">
 
-  <section class="mt6 waiver-section txt-s">
-    <p>I acknowledge that winter backcountry travel has inherent risks, hazards, and dangers for anyone that cannot be eliminated, particularly in a wilderness environment.</p>
+    <p class='txt-s'>In consideration for my being permitted to participate in the activities of backcountry skiing/riding, Cross-country skiing, snowmobiling, and/or snowshoeing I agree to the following Waiver and Release:</p>
 
-    <p class="pt3">I UNDERSTAND THAT THESE RISKS, HAZARDS, AND DANGERS INCLUDE WITHOUT LIMITATION:</p>
-    <ul class='txt-ul'>
-      <li>Traveling and route finding in Avalanche terrain;</li>
-      <li>Skiing and Hiking in rugged country;</li>
-      <li>Injuries from skiing/boarding, snowshoeing and its equipment;</li>
-      <li>Encounters with wildlife, animals, and insects;</li>
-      <li>Temperature extremes;</li>
-      <li>Inclement weather conditions and unavailability of immediate medical attention in the wilderness in case of injury.</li>
-    </ul>
+    <div class="mt6 waiver-div txt-s">
+      <p>I acknowledge that winter backcountry travel has inherent risks, hazards, and dangers for anyone that cannot be eliminated, particularly in a wilderness environment.</p>
 
-  </section>
+      <p class="pt3">I UNDERSTAND THAT THESE RISKS, HAZARDS, AND DANGERS INCLUDE WITHOUT LIMITATION:</p>
+      <ol class='txt-ol'>
+        <li>Traveling and route finding in Avalanche terrain;</li>
+        <li>Skiing and Hiking in rugged country;</li>
+        <li>Injuries from skiing/boarding, snowshoeing and its equipment;</li>
+        <li>Encounters with wildlife, animals, and insects;</li>
+        <li>Temperature extremes;</li>
+        <li>Inclement weather conditions and unavailability of immediate medical attention in the wilderness in case of injury.</li>
+      </ol>
 
-  <section class="waiver-section txt-s">
-    <p>I understand the risks, hazards, and dangers of backcountry skiing, snowboarding, cross country skiing and/or snowshoeing and have had the opportunity to discuss with MONTANA BACKCOUNTRY YURTS LLC. DBA.YURTSKI. I understand that these activities may require good physical conditioning and a degree of skill and knowledge. I believe I have that good physical conditioning and the degree of skill and knowledge necessary for me to engage in these activities safely. I understand that I have responsibilities. My participation in this activity is purely voluntary. No one is forcing me to participate and I elect to participate in spite of the risks.</p>
-  </section>
-
-  <section class="waiver-section txt-s">
-    <p>I AM VOLUNTARILY USING THE SERVICES OF MONTANA BACKCOUNTRY YURTS LLC, DBA.YURTSKI WITH FULL KNOWLEDGE OF THE INHERENT RISKS, HAZARDS, AND DANGERS INVOLVED AND HEREBY ASSUME AND ACCEPT ANY AND ALL RISKS OF INJURY, PARALYSIS, OR DEATH.</p>
-
-    <p>Lastly, I, for heirs, my successors, executors, subrogees, and myself hereby KNOWINGLY AND INTENTIONALLY WAIVE AND RELEASE, INDEMNIFY AND HOLD HARMLESS MONTANA BACKCOUNTRY YURTS LLC, DBA.YURTSKI, their directors, officers, agents, employees and/or volunteers from and against any and all claims, actions, causes of action, liabilities, suits, expenses (including reasonable attorneys' fees) which are related to, arise out of, or are in any way connected with my participation in this activity including, but not limited to: NEGLIGENCE of any kind or nature, whether foreseen or unforeseen, arising directly or indirectly out of any damage, loss, injury, paralysis, or death to me or my property as a result of my engaging in these activities or the use of these services, animals or equipment., whether such damage, loss, injury, paralysis, or death results from negligence of MONTANA BACKCOUNTRY YURTS LLC. DBA YURTSKI or it's guides or from some other cause.</p>
-
-    <p>I, for my heirs, successors, executors, subrogees, and myself hereby further agree not to sue as a result of any injury, paralysis, or death suffered in connection with my use and participation in the activities of backcountry travel including, but not limited to skiing/boarding, snowshoeing, and/or snowmobiling.</p>
-  </section>
-
-  <section class="waiver-section txt-s">
-    <p>I have and know how to use all essential avalanche equipment including but not limited to transceiver, probe and shovel.</p>
-  </section>
-
-  <section id="signbox" class="sign mt12">
-    <p class="txt-s">I HAVE CAREFULLY READ, CLEARLY UNDERSTAND, AND VOLUNTARILY SIGN THIS WAIVER AND RELEASE AGREEMENT</p>
-
-    <div class="signbox mt12 align-center">
-
-      <form action="javascript:completeWaiver();">
-
-        <input id="name" name="name" class='input input--border-green w300' placeholder='Full Name' />
-
-        <input id="email" name="email" class='mt6 input input--border-green w300' placeholder='Email' />
-
-        <button class="btn btn--green mt6 w300 align-center" type="submit" id="agree">I Agree</button>
-
-      </form>
-
+      <input required class='input input--border-red mt12 w60 initials px6' placeholder='Initial' />
     </div>
-  </section>
 
-  <section id="signed" class="mt12 border border--green py6 px6" style="display:none;">
-    <p class="txt-s">I HAVE CAREFULLY READ, CLEARLY UNDERSTAND, AND VOLUNTARILY SIGN THIS WAIVER AND RELEASE AGREEMENT</p>
+    <div class="waiver-div txt-s">
+      <p>I understand the risks, hazards, and dangers of backcountry skiing, snowboarding, cross country skiing and/or snowshoeing and have had the opportunity to discuss with <strong>MONTANA BACKCOUNTRY YURTS LLC, DBA.YURTSKI</strong>. I understand that these activities may require good physical conditioning and a degree of skill and knowledge. I believe I have that good physical conditioning and the degree of skill and knowledge necessary for me to engage in these activities safely. I understand that I have responsibilities. My participation in this activity is purely voluntary. No one is forcing me to participate and I elect to participate in spite of the risks.</p>
 
-    <div class="signed mt12 align-center">
-
-      <p>Signed By<br>
-        <p style="font-family:cursive;font-size:16px;" id='clientName'></p>
-        <p style="font-family:sans-serif;font-size:16px;" id='clientEmail'></p>
-        <p>On <em><span id="date" class="color-red"></span></em></p>
-
+      <input required class='input input--border-red mt12 w60 initials px6' placeholder='Initial' />
     </div>
-  </section>
+
+    <div class="waiver-div txt-s">
+      <p><strong>BACKCOUNTRY SKIING IS A HAZARDOUS SPORT.</strong> All Skiers who participate in services provided by YurtSki understand and agree that he or she is competent in backcountry ski skills, and safety, knows and voluntarily assumes any and all risks of skiing (touring and downhill) in the backcountry including: Travel in avalanche hazard terrain. Avalanche terrain assessment and safe travel techniques. This includes skiing to and from the hut(s) and anywhere in the vicinity of or around or about the hut(s) during the time the Skier is renting the hut(s).</p>
+
+      <p>I acknowledge the risks of backcountry skiing and understand that I am required to carry the minimum required avalanche equipment: digital avalanche beacon, shovel, probe. I am educated and practiced in the use this equipment.</p>
+
+      <input required class='input input--border-red mt12 w60 initials px6' placeholder='Initial' />
+    </div>
+
+    <div class="waiver-div txt-s">
+      <p>I AM VOLUNTARILY USING THE SERVICES OF <strong>MONTANA BACKCOUNTRY YURTS LLC, DBA.YURTSKI</strong> WITH FULL KNOWLEDGE OF THE INHERENT RISKS, HAZARDS, AND DANGERS INVOLVED AND HEREBY ASSUME AND ACCEPT ANY AND ALL RISKS OF INJURY, PARALYSIS, OR DEATH.</p>
+
+      <p>Lastly, I, for heirs, my successors, executors, subrogees, and myself hereby KNOWINGLY AND INTENTIONALLY WAIVE AND RELEASE, INDEMNIFY AND HOLD HARMLESS MONTANA BACKCOUNTRY YURTS LLC, DBA.YURTSKI, their directors, officers, agents, employees and/or volunteers from and against any and all claims, actions, causes of action, liabilities, suits, expenses (including reasonable attorneys' fees) which are related to, arise out of, or are in any way connected with my participation in this activity including, but not limited to: NEGLIGENCE of any kind or nature, whether foreseen or unforeseen, arising directly or indirectly out of any damage, loss, injury, paralysis, or death to me or my property as a result of my engaging in these activities or the use of these services, animals or equipment., whether such damage, loss, injury, paralysis, or death results from negligence of MONTANA BACKCOUNTRY YURTS LLC. DBA YURTSKI or it's guides or from some other cause.</p>
+
+      <p>I, for my heirs, successors, executors, subrogees, and myself hereby further agree not to sue as a result of any injury, paralysis, or death suffered in connection with my use and participation in the activities of backcountry travel including, but not limited to skiing/boarding, snowshoeing, and/or snowmobiling.</p>
+      <input required class='input input--border-red mt12 w60 initials px6' placeholder='Initial' />
+    </div>
+
+    <div id="signbox" class="sign mt12">
+      <p class="txt-s txt-bold">I HAVE CAREFULLY READ, CLEARLY UNDERSTAND, AND VOLUNTARILY SIGN THIS WAIVER AND RELEASE AGREEMENT</p>
+
+      <div class="signbox mt12 align-center">
+
+          <input required id="name" name="name" class='input input--border-red w300' style="font-family:cursive;" placeholder='Full Name' />
+
+          <input required type="email" id="email" name="email" class='mt6 input input--border-red w300' placeholder='Email' />
+
+          <button class="btn btn--green mt6 w300 align-center" type="submit" id="agree">I Agree</button>
+
+      </div>
+    </div>
+
+    </form>
+
+    <div id="signed" class="mt12 border border--green py6 px6" style="display:none;">
+      <p class="txt-s">I HAVE CAREFULLY READ, CLEARLY UNDERSTAND, AND VOLUNTARILY SIGN THIS WAIVER AND RELEASE AGREEMENT</p>
+
+      <div class="signed mt12 align-center">
+
+        <p>Signed By<br>
+          <p style="font-family:cursive;font-size:16px;" id='clientName'></p>
+          <p style="font-family:sans-serif;font-size:16px;" id='clientEmail'></p>
+          <p>On <em><span id="date" class="color-red"></span></em></p>
+
+      </div>
+    </div>
 
   <footer class="mt36 align-center">
     <p>&copy; Montana Backcountry Yurts, LLC dba YurtSki 2018 </p>
@@ -93,14 +101,10 @@
 
       document.getElementById('date').innerHTML = date;
 
-
       //Change sign box to signed
       document.getElementById('signbox').style.display = 'none';
       document.getElementById('signed').style.display = 'block';
-
-
     }
-
 
   </script>
 
