--- a/waiver/waiver-template.html
+++ b/waiver/waiver-template.html
@@ -2,6 +2,7 @@
 <head>
   <title>YurtSki Waiver</title>
   <link href="https://api.mapbox.com/mapbox-assembly/v0.20.0/assembly.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/signature_pad@2.3.2/dist/signature_pad.min.js"></script>
   <link rel="stylesheet" href="waiver.css" type="text/css" >
 </head>
 
@@ -9,11 +10,12 @@
 
   <h2 class="txt-h2 py12">Montana Backcountry Yurts &amp; YurtSki Waiver 2018</h2>
 
-  <form action="javascript:completeWaiver();">
+  [@form-start]
 
     <p class='txt-s'>In consideration for my being permitted to participate in the activities of backcountry skiing/riding, Cross-country skiing, snowmobiling, and/or snowshoeing I agree to the following Waiver and Release:</p>
 
     <div class="mt6 waiver-div txt-s">
+
       <p>I acknowledge that winter backcountry travel has inherent risks, hazards, and dangers for anyone that cannot be eliminated, particularly in a wilderness environment.</p>
 
       <p class="pt3">I UNDERSTAND THAT THESE RISKS, HAZARDS, AND DANGERS INCLUDE WITHOUT LIMITATION:</p>
@@ -26,13 +28,14 @@
         <li>Inclement weather conditions and unavailability of immediate medical attention in the wilderness in case of injury.</li>
       </ol>
 
-      <input required class='input input--border-red mt12 w60 initials px6' placeholder='Initial' />
+      [@initial-box-1]
+
     </div>
 
     <div class="waiver-div txt-s">
       <p>I understand the risks, hazards, and dangers of backcountry skiing, snowboarding, cross country skiing and/or snowshoeing and have had the opportunity to discuss with <strong>MONTANA BACKCOUNTRY YURTS LLC, DBA.YURTSKI</strong>. I understand that these activities may require good physical conditioning and a degree of skill and knowledge. I believe I have that good physical conditioning and the degree of skill and knowledge necessary for me to engage in these activities safely. I understand that I have responsibilities. My participation in this activity is purely voluntary. No one is forcing me to participate and I elect to participate in spite of the risks.</p>
 
-      <input required class='input input--border-red mt12 w60 initials px6' placeholder='Initial' />
+      [@initial-box-2]
     </div>
 
     <div class="waiver-div txt-s">
@@ -40,7 +43,7 @@
 
       <p>I acknowledge the risks of backcountry skiing and understand that I am required to carry the minimum required avalanche equipment: digital avalanche beacon, shovel, probe. I am educated and practiced in the use this equipment.</p>
 
-      <input required class='input input--border-red mt12 w60 initials px6' placeholder='Initial' />
+      [@initial-box-3]
     </div>
 
     <div class="waiver-div txt-s">
@@ -49,64 +52,19 @@
       <p>Lastly, I, for heirs, my successors, executors, subrogees, and myself hereby KNOWINGLY AND INTENTIONALLY WAIVE AND RELEASE, INDEMNIFY AND HOLD HARMLESS MONTANA BACKCOUNTRY YURTS LLC, DBA.YURTSKI, their directors, officers, agents, employees and/or volunteers from and against any and all claims, actions, causes of action, liabilities, suits, expenses (including reasonable attorneys' fees) which are related to, arise out of, or are in any way connected with my participation in this activity including, but not limited to: NEGLIGENCE of any kind or nature, whether foreseen or unforeseen, arising directly or indirectly out of any damage, loss, injury, paralysis, or death to me or my property as a result of my engaging in these activities or the use of these services, animals or equipment., whether such damage, loss, injury, paralysis, or death results from negligence of MONTANA BACKCOUNTRY YURTS LLC. DBA YURTSKI or it's guides or from some other cause.</p>
 
       <p>I, for my heirs, successors, executors, subrogees, and myself hereby further agree not to sue as a result of any injury, paralysis, or death suffered in connection with my use and participation in the activities of backcountry travel including, but not limited to skiing/boarding, snowshoeing, and/or snowmobiling.</p>
-      <input required class='input input--border-red mt12 w60 initials px6' placeholder='Initial' />
+
+      [@initial-box-4]
     </div>
 
-    <div id="signbox" class="sign mt12">
-      <p class="txt-s txt-bold">I HAVE CAREFULLY READ, CLEARLY UNDERSTAND, AND VOLUNTARILY SIGN THIS WAIVER AND RELEASE AGREEMENT</p>
+    [@signbox]
 
-      <div class="signbox mt12 align-center">
+    [@form-end]
 
-          <input required id="name" name="name" class='input input--border-red w300' style="font-family:cursive;" placeholder='Full Name' />
-
-          <input required type="email" id="email" name="email" class='mt6 input input--border-red w300' placeholder='Email' />
-
-          <button class="btn btn--green mt6 w300 align-center" type="submit" id="agree">I Agree</button>
-
-      </div>
-    </div>
-
-    </form>
-
-    <div id="signed" class="mt12 border border--green py6 px6" style="display:none;">
-      <p class="txt-s">I HAVE CAREFULLY READ, CLEARLY UNDERSTAND, AND VOLUNTARILY SIGN THIS WAIVER AND RELEASE AGREEMENT</p>
-
-      <div class="signed mt12 align-center">
-
-        <p>Signed By<br>
-          <p style="font-family:cursive;font-size:16px;" id='clientName'></p>
-          <p style="font-family:sans-serif;font-size:16px;" id='clientEmail'></p>
-          <p>On <em><span id="date" class="color-red"></span></em></p>
-
-      </div>
-    </div>
+  <script src="[@javascript]"></script>
 
   <footer class="mt36 align-center">
     <p>&copy; Montana Backcountry Yurts, LLC dba YurtSki 2018 </p>
   </footer>
-
-  <script type="text/javascript">
-    function completeWaiver(){
-      console.log('submitting')
-
-      var name = document.getElementById('name').value;
-      var email = document.getElementById('email').value;
-
-      console.log(name, email)
-
-      document.getElementById('clientName').innerHTML = name;
-      document.getElementById('clientEmail').innerHTML = email;
-
-      var date = new Date()
-
-      document.getElementById('date').innerHTML = date;
-
-      //Change sign box to signed
-      document.getElementById('signbox').style.display = 'none';
-      document.getElementById('signed').style.display = 'block';
-    }
-
-  </script>
 
 </body>
 </html>
