--- a/waiver/waiver-template.html
+++ b/waiver/waiver-template.html
@@ -4,6 +4,25 @@
   <link href="https://api.mapbox.com/mapbox-assembly/v0.20.0/assembly.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/signature_pad@2.3.2/dist/signature_pad.min.js"></script>
   <link rel="stylesheet" href="waiver.css" type="text/css" >
+
+  <style>
+    body{
+      margin:10px;
+      padding:5px;
+      max-width:600px;
+      margin: 0 auto;
+    }
+
+    div.waiver-div{
+      margin-bottom:20px;
+      font-family:monospace;
+    }
+
+    input.initials{
+      font-family:cursive;
+    }
+  </style>
+
 </head>
 
 <body>
