updated pricing and exmaple'

--- a/pages/prices.html
+++ b/pages/prices.html
@@ -2,13 +2,22 @@
 layout: page
 title: What We Offer
 navigation_title: Prices
-permalink: /prices
+permalink: /pricing
 order: 2
 header: '/img/skinning.jpg'
 ---
 
-<h2 class="txt-h2 pb6">Rates</h2>
+<h2 class="txt-h2 pb6">Yurt Rates</h2>
+
 <p>Each of our yurts cost <strong>$50 per person</strong> per night with varying minimums depending on weekdays or weekends/holidays.</p>
+<div class="align-center px36">
+<table class="table">
+	<tr>
+		<td style="max-width:40px;">Per Person, Per Night</td>
+		<th>$50</th>
+	</tr>
+</table>
+</div>
 
 <h4 class="txt-h4 mt12">Yurt Minimums</h4>
 
@@ -22,13 +31,13 @@ header: '/img/skinning.jpg'
 			</tr>
 			<tr>
 				<th>Lupine Yurt</th>
-				<td> $100 </td>
-				<td> $200 </td>
+				<td> $100 minimum</td>
+				<td> $200 minimum</td>
 			</tr>
 			</tr>
 				<th>Alpine Yurt</th>
-				<td> $200 </td>
-				<td> $300 </td>
+				<td> $200 minimum</td>
+				<td> $300 minimum</td>
 			</tr>
 	</table>
 </div>
@@ -44,7 +53,8 @@ header: '/img/skinning.jpg'
 
 <!-- <p>If your group wants to be towed all the way to the yurt along the 11 mile snowmobile road, our driver will make an extra trip for the cost of an extra toboggan. This decision can be made at the trailhead.</p -->
 
-<p>Each toboggan is approximately 3' by 8' and can carry up to 400 lbs of gear. A group of 6 for 3 nights can usually fit all of their gear in one toboggan.</p>
+<p>To accomdate guests to both yurts, we offer two fixed times for gear hauls: <strong>8:30am</strong> and <strong>11:30am</strong>. These are first-come, first-serve time slots purchased online with your reservation at the base prices below. If you would like to book any other time that works better for your group, perhaps after work or one of the fixed times already reserved by another party, our gear haul drivers are happy to accomodate for a $50 surcharge.</p>
+
 <div class="align-center px36">
 	<table class="table">
 			<tr>
@@ -53,8 +63,13 @@ header: '/img/skinning.jpg'
 				<th>Second Toboggan<br></th>
 			</tr>
 			<tr>
-				<th><strong>Haul In</th>
+				<td><strong>Haul In</strong><br>8:30am or 11:30am</td>
 				<td> $300 </td>
+				<td> $200 </td>
+			</tr>
+			<tr>
+				<td><strong>Haul In</strong><br>Any time of your choosing</td>
+				<td> $350 </td>
 				<td> $200 </td>
 			</tr>
 			<tr>
@@ -65,12 +80,12 @@ header: '/img/skinning.jpg'
 	</table>
 </div>
 
+<p class="mt12">We will coordinate your gear haul out time at the trailhead.</p>
 
-<p
+<p class="pb24 border-b">Each toboggan is approximately 3' by 8' and can carry up to 400 lbs of gear. A group of 6 for 3 nights can usually fit all of their gear in one toboggan.</p>
 
-</p>
 
-<p></p>
+</hr>
 
 <!--
 
