adding checkfront integration to all the buttons

--- a/pages/booking.html
+++ b/pages/booking.html
@@ -1,11 +1,11 @@
 ---
 layout: page
-title: About The Yurts
-permalink: /checkfront
+title: Book with YurtSki!
+permalink: /book
+navigation_title: Book Now
 header: '/img/yurts-night-bg.jpg'
+order: 10
 ---
-
-INTERNAL USE: CHECKFRONT EXAMPLE
 
 <script type="text/javascript" src="//yurtski.checkfront.com/lib/interface--31.js"></script>
 <!-- CHECKFRONT BOOKING PLUGIN v23-->
