adding all sorts of stuff

--- a/pages/prices.html
+++ b/pages/prices.html
@@ -60,7 +60,7 @@ header: '/img/skinning.jpg'
 			<tr>
 				<td></td>
 				<th>First Toboggan<br></th>
-				<th>Second Toboggan<br></th>
+				<th>Each Additional Toboggan<br></th>
 			</tr>
 			<tr>
 				<td><strong>Haul In</strong><br>8:30am or 11:30am</td>
@@ -84,8 +84,13 @@ header: '/img/skinning.jpg'
 
 <p class="pb24 border-b">Each toboggan is approximately 3' by 8' and can carry up to 400 lbs of gear. A group of 6 for 3 nights can usually fit all of their gear in one toboggan.</p>
 
+<h2 class="txt-h2 mt24">Yurt Rental Policy</h2>
+<ul>
+	<li><p>A non-refundable 50% deposit is due at booking. We will charge the remaining 50% to your card the week before your trip.</p>
+</ul>
 
-</hr>
+<h4 class="txt-h4 mt12">Cancellation</h4>
+<p>You can cancel your reservation for a 50% refund up to 30 days prior to your trip start date. After that we cannot offer a refund.</p>
 
 <!--
 
