updated cancellation policy

--- a/pages/prices.html
+++ b/pages/prices.html
@@ -13,7 +13,7 @@ header: '/img/skinning.jpg'
 <div class="align-center px36">
 <table class="table">
 	<tr>
-		<td style="max-width:40px;">Per Person, Per Night</td>
+		<td style="max-width:40px;">Per Person Per Night</td>
 		<th>$50</th>
 	</tr>
 </table>
@@ -31,13 +31,13 @@ header: '/img/skinning.jpg'
 			</tr>
 			<tr>
 				<th>Lupine Yurt</th>
-				<td> $100 minimum</td>
-				<td> $200 minimum</td>
+				<td> $100 minimum<br>(or 2 people)</td>
+				<td> $200 minimum<br>(or 4 people)</td>
 			</tr>
 			</tr>
 				<th>Alpine Yurt</th>
-				<td> $200 minimum</td>
-				<td> $300 minimum</td>
+				<td> $200 minimum<br>(or 4 people)</td>
+				<td> $300 minimum<br>(or 6 people)</td>
 			</tr>
 	</table>
 </div>
@@ -82,15 +82,18 @@ header: '/img/skinning.jpg'
 
 <p class="mt12">We will coordinate your gear haul out time at the trailhead.</p>
 
-<p class="pb24 border-b">Each toboggan is approximately 3' by 8' and can carry up to 400 lbs of gear. A group of 6 for 3 nights can usually fit all of their gear in one toboggan.</p>
+<p class="mt12">Each toboggan is approximately 3' by 8' and can carry up to 400 lbs of gear. A group of 6 for 3 nights can usually fit all of their gear in one toboggan.</p>
+
+<p class="pb24 border-b">We will try to fit your gear into one toboggan; however, if an additional gear haul is required, we charge an additional $200 per toboggan.</p>
 
 <h2 class="txt-h2 mt24">Yurt Rental Policy</h2>
 <ul>
-	<li><p>A non-refundable 50% deposit is due at booking. We will charge the remaining 50% to your card the week before your trip.</p>
+	<li><p>We collect 100% of your trip cost up front at the time of your booking.</p></li>
+	<li><p>Each yurt is exclusive, we do not offer open beds to other parties.</p></li>
 </ul>
 
 <h4 class="txt-h4 mt12">Cancellation</h4>
-<p>You can cancel your reservation for a 50% refund up to 30 days prior to your trip start date. After that we cannot offer a refund.</p>
+<p>You can cancel your reservation for a 50% refund up to 30 days prior to your trip start date. After that we cannot offer a refund. To cancel, please <a class='link' href="mailto:info@yurtski.com">email</a> or call us at <a class="link" href="tel:+14068484824">(406) 848-4824</a></p>
 
 <!--
 
