updated the padding for classes

--- a/pages/classes.html
+++ b/pages/classes.html
@@ -10,7 +10,7 @@ date: '20181207'
 
   {% if page.layout == 'class' %}
 
-    <div class="pt12 mb24">
+    <div class="pt12 px24 mb24">
       <a href="{{page.url}}" class="txt-h4 link">{{page.title}}</h4>
       <p class="mt6">{{page.description}}</p>
 
